// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MsConfirm 组件 demo 测试 正确渲染 MsConfirm arg.tsx 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      打 开
    </span>
  </button>
</div>
`;

exports[`MsConfirm 组件 demo 测试 正确渲染 MsConfirm basic.tsx 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      打 开
    </span>
  </button>
</div>
`;

exports[`MsConfirm 组件 demo 测试 正确渲染 MsConfirm handler.tsx 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          普通抽屉
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          改过组件层级抽屉
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`MsConfirm 组件 demo 测试 正确渲染 MsConfirm loading.tsx 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      打 开
    </span>
  </button>
</div>
`;

exports[`MsConfirm 组件 demo 测试 正确渲染 MsConfirm promise.tsx 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          Resolve 成功
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          Reject 失败
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`MsConfirm 组件 demo 测试 正确渲染 MsConfirm size.tsx 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          small(416px)
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          middle(616px)
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          large(816px)
        </span>
      </button>
    </div>
  </div>
</div>
`;
